k8s/base/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: jambo
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: jambo-promtail:local
          args: ["-config.file=/etc/promtail/promtail-config.yml"]
          volumeMounts:
            - name: config
              mountPath: /etc/promtail/promtail-config.yml
              subPath: promtail-config.yml
            - name: positions
              mountPath: /run/promtail
            - name: logs
              mountPath: /var/log
              readOnly: true
            - name: docker-containers
              mountPath: /var/lib/docker/containers
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: positions
          emptyDir: {}
        - name: logs
          hostPath:
            path: /var/log
        - name: docker-containers
          hostPath:
            path: /var/lib/docker/containers
